--- a/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
@@ -34,7 +34,7 @@
 <% if (theme.banner.enable) { %>
 <script>
     // 每天切换 banner 图.  Switch banner image every day.
-    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %><%- url_for('/medias/banner/' + new Date().getDate() + '.jpg') %>)');
+    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %><%- url_for('/medias/banner/' + Math.ceil(Math.random()*32) + '.jpg') %>)');
 </script>
 <% } else { %>
 <script>
